# taskmgr-rs

./: .gitignore  Cargo.toml  README.md  index.html
app/: Cargo.toml
app/src/: app.rs  lib.rs
src/: app.rs  enums.rs  lib.rs  main.rs
src/windows/: app_history.rs  details.rs  mod.rs  performance.rs  processes.rs  services.rs  settings.rs  startup_apps.rs  users.rs
window_titles/: Cargo.toml
window_titles/src/: lib.rs  winapi.rs
