[package]
name = "taskmanager"
version = "0.1.0"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]
edition = "2021"

[dependencies]
egui = "0.30"
egui_extras = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
log = "0.4"
num-format = "0.4"
sysinfo = "0.33"
# itertools = "0.11.0"

[profile.release]
opt-level = 3

[profile.dev.package."*"]
opt-level = 2
