[package]
name = "window_titles"
version = "0.1.0"
authors = ["Matthew Wilding <matt@wildingstudios.com>"]
edition = "2021"
rust-version = "1.71"

[target.'cfg(target_os = "linux")'.dependencies]
xcb = "1.2.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winnt", "winuser", "minwindef"] }
